--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,8 +39,11 @@ target-version = "py312"
 line-length = 100
 
 [tool.ruff.lint]
-select = ["E", "F", "I", "UP", "B", "SIM"]
-ignore = ["B008"]  # Allow Depends/Query/Header in FastAPI function defaults
+select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "A", "PT"]
+ignore = [
+    "B008",    # Allow Depends/Query/Header in FastAPI function defaults
+    "PT011",   # pytest.raises too broad — we use match= where valuable
+]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
