--- a/helm/sleep-harmonizer/templates/deployment.yaml
+++ b/helm/sleep-harmonizer/templates/deployment.yaml
@@ -32,6 +32,10 @@ spec:
       securityContext:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- with .Values.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
       {{- if .Values.migration.enabled }}
       initContainers:
